# sobrn-ai-stack

./: .env.example  .gitignore  README.md  docker-compose.yml
cli/: README.md  pyproject.toml
cli/sobrn/: __init__.py  cli.py  estimate.py  portability.py  pricing.py  report.py  scan.py  utils.py
docs/: getting-started.md  hardware.md  models.md  openai-compatible-api.md  portability-score.md  pricing-checker.md  scanner.md
examples/openai-compatible-node/: README.md  index.js  package.json
examples/openai-compatible-python/: README.md  main.py
examples/pricing-checker/: README.md  sobrn.yml
pricing/: README.md  models.json
reports/: example-pricing-report.md
scripts/: healthcheck.sh  pull-model.sh
