[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sobrn"
version = "0.1.0"
description = "Local pre-flight AI pricing and portability checker."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SOBRN" }
]
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
sobrn = "sobrn.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sobrn*"]
